--- a/index.html
+++ b/index.html
@@ -47,10 +47,30 @@
  </nav>
  <nav>
     <div class="nav-banner-parent">
-        <img width="92px" src="./assets/logo-dark.png" alt="Bangladesh-Govt-Logo">
-        <h1 class="banner-text-head">Emergency Service Directory</h1>
+        <div class="Responsive-banner">
+            <img width="92px" src="./assets/logo-dark.png" alt="Bangladesh-Govt-Logo">
+            <h1 class="banner-text-head">Emergency Service Directory</h1>
+        </div>
         <p class="banner-text-description">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
     </div>
  </nav>
+ <!-- Responsive Part of Nav battons (Heart,Coin,Copy,Call history) -->
+    <section>
+        <div class="responsive-parent-div no-display">
+        <div class="common no-display">
+        Call History 
+     </div>
+     <div class="common no-display">
+        Copy 2
+    </div>
+     <div class="common no-display">
+        <p>2</p>
+        <img width="35px" height="35px" src="./assets/heart.png" alt="Heart">
+     </div>
+     <div class="common no-display">
+        <p>100</p>
+        <img width="35px" height="35px" src="./assets/coin.png" alt="">
+     </div>
+    </section>
 </body>
 </html>
