heartIcon is workable now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="border nav-common-div">
                  <!-- ======JS====== -->
                 <h2>
-                    <span>0</span>
+                    <span id="adding-heart">0</span>
                 </h2>
                 <img width="25px" src="./assets/heart.png" alt="heart">
             </div>
@@ -68,7 +68,7 @@
                 <img width="25px" src="./assets/coin.png" alt="coin.jpg">
             </div>
             <div class="common">
-                <p>2</p>
+                <span id="adding-heart2">0</span>
                 <img width="25px" src="./assets/heart.png" alt="">
             </div>
             <div class="common">
@@ -87,7 +87,7 @@
         <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -117,7 +117,7 @@
         <img width="40px" src="./assets/police.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -147,7 +147,7 @@
         <img width="40px" src="./assets/fire-service.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -177,7 +177,7 @@
         <img width="40px" src="./assets/ambulance.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -207,7 +207,7 @@
         <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -246,7 +246,7 @@
         <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -276,7 +276,7 @@
         <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -303,10 +303,10 @@
      <div class="cards-parent">
     <div class="card-img-icon">
       <div class="card-img-bg">
-        <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
+        <img width="40px" src="./assets/brac.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -333,10 +333,10 @@
    <div class="cards-parent">
     <div class="card-img-icon">
       <div class="card-img-bg">
-        <img width="40px" src="./assets/emergency.png" alt="Emergency.jpg">
+        <img width="40px" src="./assets/Bangladesh-Railway.png" alt="Emergency.jpg">
       </div>
       <p>
-        <i class="fa-regular fa-heart"></i>
+        <i class="fa-regular fa-heart heart-button"></i>
       </p>
     </div>
     <div class="card-title-dis">
@@ -359,5 +359,6 @@
   </div>
   </div>
      </main>
+     <script src="function.js"></script>
 </body>
 </html>
