call btn are all workable now

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="border nav-common-div">
                 <!-- ======JS====== -->
                 <h2>
-                    <span>100</span>
+                    <span id="default-coin">200</span>
                 </h2>
                 <img width="25px" src="./assets/coin.png" alt="coin">
             </div>
@@ -64,7 +64,7 @@
         </div>
         <div class="right-side">
             <div class="common">
-                <p>100</p>
+                <p id="default-coin2">200</p>
                 <img width="25px" src="./assets/coin.png" alt="coin.jpg">
             </div>
             <div class="common">
@@ -105,7 +105,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card1-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -135,7 +135,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card2-call" class="card-btn-common btn-right">
        <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -165,7 +165,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card3-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -195,7 +195,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card4-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -225,7 +225,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card5-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -264,7 +264,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card6-call" class="card-btn-common btn-right">
        <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -294,7 +294,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card7-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -324,7 +324,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card8-call" class="card-btn-common btn-right">
         <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
@@ -352,7 +352,7 @@
       <button style="color: #5C5C5C;" class="card-btn-common">
         <i class="fa-regular fa-copy"></i> Copy
       </button>
-      <button class="card-btn-common btn-right">
+      <button id="card9-call" class="card-btn-common btn-right">
        <i class="fa-solid fa-phone"></i> Call
       </button>
     </div>
