js after cs rebuild

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="coin-heart">
         <h2>
-          <span>100</span>
+          <span id="Default-coin">100</span>
         </h2>
           <img width="25px" src="./assets/coin.png" alt="coin">
       </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="responsive-navbar-HCC">
         <div class="rNavbar-common">
-          <p id="default-coin2">100</p>
+          <p id="rDefault-coin">100</p>
           <img width="25px" src="./assets/coin.png" alt="coin.jpg">
       </div>
       <div class="rNavbar-common">
@@ -102,11 +102,11 @@
     </div>
   </div><br>
   <div class="card-button">
-    <button class="cButton-common">
+    <button  class="cButton-common">
       <i class="fa-regular fa-copy "></i> Copy
     </button>
-    <button class="cButton-common cButton-green">
-      <i class="fa-solid fa-phone "></i> Call
+    <button data-name=" 📞Calling National Emergency Service 999..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
      </button>
       </div>
     </div>
