Main part of the page is created and responsive now

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
 
 <!-- main card and history section -->
  <main>
+
   <div class="main-Grid">
-   <div class="Cards-parent">
+     <!-- National Emergency -->
+       <div class="Cards-parent">
     <div class="img-icon">
       <div class="img-bgColor">
         <img width="35px" src="./assets/emergency.png" alt="Emergency.png">
@@ -109,8 +111,231 @@
       <i class="fa-solid fa-phone " ></i> Call
      </button>
       </div>
+       </div>
+     <!-- Police Number -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor" style="background-color: rgb(199, 228, 255);">
+        <img width="35px" src="./assets/police.png" alt="Emergency.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Police Helpline Number</p>
+        <p class="zero">Police</p>
     </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">999</p>
+        <p class="zero description-font">Police</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Police 999..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Fire Service Number -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/fire-service.png" alt="fire-service.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Fire Service Number</p>
+        <p class="zero">Fire</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">999</p>
+        <p class="zero description-font">Fire</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Fire Service 999..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Ambulance Service -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/ambulance.png" alt="Ambulance.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Ambulance</p>
+        <p class="zero">Health</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">1994-999999</p>
+        <p class="zero description-font">All</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Ambulance 1994-999999..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Women & Child Helpline -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/emergency.png" alt="Emergency.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Women & Child Helpline</p>
+        <p class="zero">Women & Child Helpline</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">109</p>
+        <p class="zero description-font">Help</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Women & Child care Helpline 109..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Anti-Corruption Helpline -->
+       <div class="Cards-parent">
+      <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/emergency.png" alt="Emergency.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Anti-Corruption Helpline</p>
+        <p class="zero">Anti-Corruption</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">106</p>
+        <p class="zero description-font">Govt.</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Anti-Corruption Service 106..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Electricity Helpline -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/emergency.png" alt="Emergency.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Electricity Helpline</p>
+        <p class="zero">Electricity Outrage</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">16216</p>
+        <p class="zero description-font">Electricity</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Electricity Helpline 16216..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+     <!-- Brac Helpline -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/brac.png" alt="brac.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Brac Helpline</p>
+        <p class="zero">BRAC</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">16445</p>
+        <p class="zero description-font">NGO</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Brac Helpline 16445..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+      <!-- Bangladesh Railway Helpline  -->
+       <div class="Cards-parent">
+    <div class="img-icon">
+      <div class="img-bgColor">
+        <img width="35px" src="./assets/Bangladesh-Railway.png" alt="Bangladesh-Railway.png">
+      </div>
+        <i class="fa-regular fa-heart heart-button"></i>
+    </div><br>
+    <div class="card-document">
+      <div class="Dcard-common">
+        <p class="zero bold-font">Bangladesh Railway Helpline</p>
+        <p class="zero">Bangladesh Railway</p>
+    </div>
+    <div class="Dcard-common">
+        <p class="zero bold-font">163</p>
+        <p class="zero description-font">Travel</p>
+    </div>
+  </div><br>
+  <div class="card-button">
+    <button  class="cButton-common">
+      <i class="fa-regular fa-copy "></i> Copy
+    </button>
+    <button data-name=" 📞Calling Bangladesh Railway Service 163..." class="cButton-common cButton-green callPhone">
+      <i class="fa-solid fa-phone " ></i> Call
+     </button>
+      </div>
+       </div>
+       <!-- History Card -->
+        <div class="Cards-parent history-card">
+          <!-- ======>History card<====== -->
+       </div>
+
+
   </div>
+
 </main>
 
   
