responsive web btns toggle

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      <!-- Responsive Part of (Heart,Coin,Copy,Call history) -->
     <div class="responsive-navbar-parent">
       <div>
-        <button class="rNav-button"><i class="fa-regular fa-clock"></i> Call History</button>
+        <button id="rHistory-button" class="rNav-button">Call History</button>
       </div>
       <div class="responsive-navbar-HCC">
         <div class="rNavbar-common">
@@ -329,7 +329,7 @@
       </div>
        </div>
        <!-- History Card -->
-        <div class="Cards-parent history-card">
+        <div id="rhistory-card" class="Cards-parent history-card">
           <!-- ======>History card<====== -->
        </div>
 
