clear button successfully added

--- a/index.html
+++ b/index.html
@@ -356,15 +356,16 @@
       </div>
        </div>
        <!-- History Card -->
-       <div id="rhistory-card" class="Cards-parent history-card ">
+        <div id="rhistory-card" 
+            class="Cards-parent  history-card ">
            <!-- hitory card nav bar -->
-          <div class="historycard-title-btn">
+           <div class="historycard-title-btn">
             <h4>
               <i class="fa-regular fa-clock"></i> Call History
             </h4>
-            <button class="navbar-btn btn-text">Clear</button>
-          </div>
-      </div>
+            <button id="clear-BTN" class="navbar-btn btn-text">Clear</button>
+           </div>
+        </div>
 </main>
 
   
